--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,37 +1,29 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-.content{
-    max-width: 1250px;
-    margin: auto;
-    padding: 0px 30px;
+.port-banner{
+    position: relative;
+    height: 50vh;
+    width: 100%; 
+    opacity: 0.7; 
+    object-fit: scale-down;
+  }
+  .port-banner::before{
+    content: "";
+    position: absolute;
+    top: 0px;
+      right: 0px;
+      bottom: 0px;
+      left: 0px;
+      background-color: rgba(0,0,0,0.25);  
+  }
 
-}
-.navigation{
-   position: fixed;
-   z-index: 5;
-   width: 100%;
-   padding: 10px 0;
-   background: #1b1b1b;
-}
-.navigation .content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.navigation .logo a{
-    color: #fff;
-}
-.navigation .menu-list{
-    display: inline-flex;
-}
-.menu-list li a{
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 25px;
-    text-decoration: none;
-
-}
+  .projects{
+    min-height: 100vh;
+    background-color: #f1f1f1;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+  .projects-header{
+      padding-bottom: 3rem;
+  }
+  .line{
+      background-color: #525252;
+  }
