--- a/test.css
+++ b/test.css
@@ -1,19 +1,15 @@
-  body{
+  /* body{
     margin: 0;    
-}
+} */
 
-h1{
+/* h1{
     margin: 2em 0;
-}
+} */
 
 img{
-    width: 100%;
+    width: 96%;
 }
 
-.container{
-    width: 95%;
-    margin: 0 auto;
-}
 
 .grid{
     display: flex;
