--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,11 @@
 }
 
 .about-section{
-    min-height: 100vh;
+    min-height: 70vh;
     padding: 3rem 0;
+}
+.leadrship{
+    min-height: 100vh !important;
+    padding: 3rem 0;
+    background-color: #f1f1f1;
 }
