--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,18 +1,20 @@
-.port-banner{
+.carousel{
     position: relative;
-    height: 50vh;
+    height: 70vh !important;
     width: 100%; 
     opacity: 0.7; 
     object-fit: scale-down;
   }
-  .port-banner::before{
+ 
+
+  .carousel::before{
     content: "";
     position: absolute;
     top: 0px;
       right: 0px;
       bottom: 0px;
       left: 0px;
-      background-color: rgba(0,0,0,0.25);  
+      background-color: rgba(0, 0, 0, 0.363);  
   }
 
   .projects{
@@ -21,9 +23,62 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
   }
+  .cta{
+    margin-top: 3em;
+    display: inline-block;
+    background: #109953;
+    color: #fff;
+    text-decoration: none;
+    padding: .5em 1em;
+    border-radius: .2em;
+    font-weight: bold;
+    border: none;
+    
+}
+.cta:hover{
+    text-decoration: none;
+    color: white;
+}
   .projects-header{
       padding-bottom: 3rem;
   }
-  .line{
+  .proj-line{
       background-color: #525252;
+      height: 3px;
+      margin-bottom: 150px !important;
   }
+  .card-deck{
+    margin-bottom: 40px;
+  }
+  .card img{
+    height: 250px;
+    width: auto;
+    object-fit: cover;
+  }
+  @media only screen 
+   and (min-width : 320px) {
+     /* .port-banner{
+       height: 37vh;
+     } */
+     .carousel-text{
+       padding-top: 2rem;
+       font-size: 20px;
+     }
+     .carousel img{
+      height: 70vh;
+      width: auto;
+      object-fit: cover;
+   }
+  }
+   @media only screen 
+   and (min-width : 1200px) {
+    .port-banner{
+      height: 50vh;
+    }
+    .carousel-text{
+      /* padding-top: 2rem; */
+      font-size: 60px;
+    }
+   }
+
+   
